lab1/Test/L1-A-10-96.output
Error Type A at Line 14
Error Type B at Line 42
Error Type B at Line 58
Error Type B at Line 63
